bugfix: button tablet margin

--- a/src/sass/components/_04-about.scss
+++ b/src/sass/components/_04-about.scss
@@ -181,8 +181,7 @@
   @media screen and (min-width: $tablet) {
     font-size: 16px;
     line-height: 1.31;
-  }
-  @media screen and (min-width: $desktop) {
+
     margin-top: 40px;
   }
   &:hover,
